debuild: install R, it is used in some example of the doc

--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get update && \
     doxygen \
     help2man \
     python-all-dev python3-all-dev python3-pandas \
+    r-base-core r-recommended- r-base-dev- r-base-html- \
     latexmk texlive-latex-extra texlive-fonts-extra \
     texlive-math-extra \
     texlive-latex-extra-doc- texlive-fonts-extra-doc- \
