--- a/debuild-i386/Dockerfile
+++ b/debuild-i386/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-get update && \
     graphviz imagemagick \
     doxygen \
     help2man \
-    python-all-dev python3-all-dev \
+    python-all-dev python3-all-dev python3-pandas \
+    r-base-core r-recommended- r-base-dev- r-base-html- \
     latexmk texlive-latex-extra texlive-fonts-extra \
     texlive-math-extra \
     texlive-latex-extra-doc- texlive-fonts-extra-doc- \
