--- a/debuild-i386/Dockerfile
+++ b/debuild-i386/Dockerfile
@@ -24,7 +24,8 @@ RUN apt-get update && \
     && \
     apt-get clean && \
     update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20 && \
-    update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
+    update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20 && \
+    ipython3 -c 'exit;'
 
 WORKDIR /build
 COPY build-spot.sh /build/build-spot.sh
