--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -25,7 +25,8 @@ RUN apt-get update && \
     && \
     apt-get clean && \
     update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20 && \
-    update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
+    update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20 &&
+    ipython3 -c 'exit;'
 
 COPY install.sh /tmp/install.sh
 RUN cd /tmp && ./install.sh && rm -f install.sh
