--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:jessie
+FROM debian:sid
 MAINTAINER Alexandre Duret-Lutz <adl@lrde.epita.fr>
 RUN apt-get update && \
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
