try to replace the APT sources.list

--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -1,6 +1,10 @@
 FROM debian:sid
 MAINTAINER Alexandre Duret-Lutz <adl@lrde.epita.fr>
-RUN apt-get update && \
+# We have a lot of timeout issues when fetching packages from
+# http://httpredir.debian.org/debian
+# Let's see if this is better when hardcoding another mirror.
+RUN echo deb http://debian.mirrors.ovh.net/debian sid main > /etc/apt/sources.list && \
+    apt-get update && \
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
     apt-get install -y \
     wget git \
