--- a/debuild-i386/Dockerfile
+++ b/debuild-i386/Dockerfile
@@ -1,6 +1,12 @@
 FROM mcandre/docker-debian-32bit:jessie
 MAINTAINER Alexandre Duret-Lutz <adl@lrde.epita.fr>
-RUN apt-get update && \
+# We have a lot of timeout issues when fetching packages from
+# http://httpredir.debian.org/debian
+# Let's see if this is better when hardcoding another mirror.
+RUN echo deb http://ftp.uk.debian.org/debian/ jessie main > /etc/apt/sources.list && \
+    echo deb http://ftp.uk.debian.org/debian/ jessie-updates main >> /etc/apt/sources.list && \
+    echo deb http://security.debian.net jessie/updates main >> /etc/apt/sources.list && \
+    apt-get update && \
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
     apt-get install -y \
     wget git \
