ipython: add unzip

--- a/ipython/Dockerfile
+++ b/ipython/Dockerfile
@@ -5,7 +5,7 @@ RUN echo 'deb http://www.lrde.epita.fr/repo/debian/ unstable/' >> /etc/apt/sourc
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
       apt-get install -y --force-yes --no-install-recommends \
       spot python3-spot python3-pip python3-dev build-essential git graphviz \
-      pdf2svg dot2tex texlive-pictures texlive-latex-extra wget sudo \
+      pdf2svg dot2tex texlive-pictures texlive-latex-extra wget sudo unzip \
       imagemagick libmagickcore-extra ghostscript libbdd0c2 libbdd-dev && \
     pip3 install "ipython[notebook]"
 
