--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -15,7 +15,7 @@ RUN echo deb http://debian.mirrors.ovh.net/debian sid main > /etc/apt/sources.li
     flex bison \
     graphviz imagemagick optipng \
     doxygen \
-    help2man \
+    help2man pandoc \
     python-all-dev python3-all-dev python3-pandas ipython3-notebook python3-pygments \
     r-base-core r-recommended- r-base-dev- r-base-html- \
     latexmk texlive-latex-extra texlive-fonts-extra \
