--- a/ipython/Makefile
+++ b/ipython/Makefile
@@ -1,10 +1,10 @@
 .PHONY: build-image push-image run
 
 build-image:
-	sudo docker build -t gadl/spot-ipython .
+	sudo docker build $(BUILDFLAGS) -t gadl/spot-ipython .
 
 push-image:
 	sudo docker push gadl/spot-ipython
 
 run:
-	cd .. && sudo docker run -p 8888:8888 -t -e USERID=`id -u` -v $$PWD:/home/docker/remote gadl/spot-ipython run-nb --profile=rise
+	cd .. && sudo docker run -p 8888:8888 -t -e USERID=`id -u` -v $$PWD:/home/docker/remote gadl/spot-ipython run-nb
