--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Alexandre Duret-Lutz <adl@lrde.epita.fr>
 # http://httpredir.debian.org/debian
 # Let's see if this is better when hardcoding another mirror.
 RUN echo deb http://debian.mirrors.ovh.net/debian sid main > /etc/apt/sources.list && \
+    echo deb http://www.lrde.epita.fr/repo/debian/ unstable/ >> /etc/apt/sources.list && \
     apt-get update && \
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
     apt-get install -y \
@@ -28,6 +29,7 @@ RUN echo deb http://debian.mirrors.ovh.net/debian sid main > /etc/apt/sources.li
     devscripts git-buildpackage cmake \
     libbdd0c2 libbdd-dev zlib1g-dev \
     locales \
+    divine-ltsmin \
     && \
     apt-get clean && \
     sed -i 's/# \+\(en_US.UTF.*\)/\1/' /etc/locale.gen && \
