--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -7,7 +7,7 @@ RUN echo deb http://debian.mirrors.ovh.net/debian sid main > /etc/apt/sources.li
     echo deb http://www.lrde.epita.fr/repo/debian/ unstable/ >> /etc/apt/sources.list && \
     apt-get update && \
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
-    apt-get install -y \
+    apt-get install -y --allow-unauthenticated \
     wget git \
     emacs-nox emacs-goodies-el org-mode \
     make gcc g++ \
