--- a/debuild-i386/Dockerfile
+++ b/debuild-i386/Dockerfile
@@ -1,24 +1,25 @@
-FROM mcandre/docker-debian-32bit:jessie
+FROM gadl/debian-i386:stretch
 MAINTAINER Alexandre Duret-Lutz <adl@lrde.epita.fr>
 # We have a lot of timeout issues when fetching packages from
 # http://httpredir.debian.org/debian
 # Let's see if this is better when hardcoding another mirror.
-RUN echo deb http://ftp.uk.debian.org/debian/ jessie main > /etc/apt/sources.list && \
-    echo deb http://ftp.uk.debian.org/debian/ jessie-updates main >> /etc/apt/sources.list && \
-    echo deb http://security.debian.net jessie/updates main >> /etc/apt/sources.list && \
+RUN echo deb http://debian.mirrors.ovh.net/debian stretch main > /etc/apt/sources.list && \
+    echo deb http://debian.mirrors.ovh.net/debian stretch-updates main >> /etc/apt/sources.list && \
+    echo deb http://security.debian.org stretch/updates main >> /etc/apt/sources.list && \
     apt-get update && \
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
     apt-get install -y \
     wget git \
     emacs-nox emacs-goodies-el org-mode \
-    make gcc-4.9 g++-4.9 \
+    make gcc g++ \
     swig3.0 \
     autoconf automake libtool \
     flex bison \
     graphviz imagemagick optipng \
     doxygen \
     help2man pandoc groff \
-    python-all-dev python3-all-dev python3-pandas ipython3-notebook python3-pygments \
+    python-all-dev python3-all-dev python3-pandas python3-ipykernel \
+    python3-nbconvert python3-entrypoints python3-pygments \
     r-base-core r-recommended- r-base-dev- r-base-html- \
     latexmk texlive-latex-extra texlive-fonts-extra \
     texlive-math-extra \
@@ -30,8 +31,6 @@ RUN echo deb http://ftp.uk.debian.org/debian/ jessie main > /etc/apt/sources.lis
     locales \
     && \
     apt-get clean && \
-    update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20 && \
-    update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20 && \
     sed -i 's/# \+\(en_US.UTF.*\)/\1/' /etc/locale.gen && \
     locale-gen && \
     ipython3 -c 'exit;'
