using the slim version was not a good idea
some packages fail to install when man pages are not present

--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stretch-slim
+FROM debian:stretch
 MAINTAINER Alexandre Duret-Lutz <adl@lrde.epita.fr>
 # We have a lot of timeout issues when fetching packages from
 # http://httpredir.debian.org/debian
