install dot2tex

--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -31,7 +31,7 @@ RUN echo deb http://debian.mirrors.ovh.net/debian sid main > /etc/apt/sources.li
     libbdd0c2 libbdd-dev zlib1g-dev \
     locales \
     divine-ltsmin spins \
-    default-jdk ant \
+    default-jdk ant dot2tex \
     && \
     apt-get clean && \
     sed -i 's/# \+\(en_US.UTF.*\)/\1/' /etc/locale.gen && \
