--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Alexandre Duret-Lutz <adl@lrde.epita.fr>
 # http://httpredir.debian.org/debian
 # Let's see if this is better when hardcoding another mirror.
 RUN echo deb http://debian.mirrors.ovh.net/debian sid main > /etc/apt/sources.list && \
-    echo 'deb [trust=true] http://www.lrde.epita.fr/repo/debian/ unstable/' >> /etc/apt/sources.list && \
+    echo 'deb [trusted=true] http://www.lrde.epita.fr/repo/debian/ unstable/' >> /etc/apt/sources.list && \
     apt-get update && \
     RUNLEVEL=1 DEBIAN_FRONTEND=noninteractive \
     apt-get install -y \
