--- a/debuild/Dockerfile
+++ b/debuild/Dockerfile
@@ -24,7 +24,7 @@ RUN echo deb http://debian.mirrors.ovh.net/debian stretch main > /etc/apt/source
     r-base-core r-recommended- r-base-dev- r-base-html- \
     latexmk texlive-latex-extra texlive-fonts-extra \
     fonts-roboto \
-    texlive-math-extra \
+    texlive-science \
     texlive-latex-extra-doc- texlive-fonts-extra-doc- \
     texlive-latex-base-doc- texlive-latex-recommended-doc- \
     texlive-pictures-doc- texlive-pstricks-doc- \
